--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGODB_CONNECTION_STRING=mongodb+srv://admin:auh3YAcYbib77f4S@cluster0.5mzbdou.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+# Auth0
+AUTH0_AUDIENCE=warzywnik-app-api
+AUTH0_ISSUER_BASE_URL=https://dev-s6ukb4fl5idw5knv.us.auth0.com/
