feat: add a controler and route to the restaurant

--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ MONGODB_CONNECTION_STRING=mongodb+srv://admin:auh3YAcYbib77f4S@cluster0.5mzbdou.
 # Auth0
 AUTH0_AUDIENCE=warzywnik-app-api
 AUTH0_ISSUER_BASE_URL=https://dev-s6ukb4fl5idw5knv.us.auth0.com/
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=dvaxscpqd
+CLOUDINARY_API_KEY=643462297363578
+CLOUDINARY_API_SECRET=AeFBXgDimQvyyyzIOyJtLc_DqDE
